--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,125 @@
-openpyxl==3.0.10
-plotly==4.14.3
-pandas==1.4.3
-streamlit==1.12.0
+aiohttp==3.8.3
+aiosignal==1.3.1
+altair==4.2.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.2.1
+async-timeout==4.0.2
+attrs==22.2.0
+backcall==0.2.0
+beautifulsoup4==4.11.2
+blinker==1.6.2
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+colorgram.py==1.2.0
+comm==0.1.2
+contourpy==1.0.7
+cryptography==39.0.0
+cycler==0.11.0
+debugpy==1.6.6
+decorator==5.1.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==1.2.0
+fastjsonschema==2.16.3
+Flask==2.2.2
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.0.3
+fonttools==4.39.4
+frozenlist==1.3.3
+gitdb==4.0.10
+GitPython==3.1.31
+google==3.0.0
+greenlet==2.0.2
+idna==3.4
+importlib-metadata==6.6.0
+ipykernel==6.21.3
+ipython==8.11.0
+ipython-genutils==0.2.0
+iso8601==1.1.0
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+kiwisolver==1.4.4
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==2.0.5
+multidict==6.0.4
+mysql==0.0.3
+mysql-connector-python==8.0.32
+mysqlclient==2.1.1
+nest-asyncio==1.5.6
+numpy==1.24.2
+openpyxl==3.1.2
+packaging==23.0
+pandas==1.5.3
+parso==0.8.3
+passlib==1.7.4
+patsy==0.5.3
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==3.1.0
+plotly==5.14.1
+plotly-express==0.4.1
+prettytable==3.6.0
+prompt-toolkit==3.0.38
+protobuf==3.20.3
+psutil==5.9.4
+psycopg2==2.9.6
+pure-eval==0.2.2
+pyarrow==12.0.0
+pycparser==2.21
+pycryptodomex==3.17
+pydeck==0.8.1b0
+Pygments==2.14.0
+Pympler==1.0.1
+pyparsing==3.0.9
+pyperclip==1.8.2
+pyrsistent==0.19.3
+pyseto==1.7.1
+python-dateutil==2.8.2
+pytz==2022.7.1
+pywin32==305
+pyzmq==25.0.0
+replit==3.2.5
+requests==2.28.2
+rich==13.3.5
+scipy==1.10.1
+seaborn==0.12.2
+Send2Trash==1.8.0
+six==1.16.0
+smmap==5.0.0
+soupsieve==2.3.2.post1
+SQLAlchemy==2.0.12
+stack-data==0.6.2
+statsmodels==0.14.0
+streamlit==1.22.0
+tabulate==0.9.0
+tenacity==8.2.2
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+traitlets==5.9.0
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==5.0.1
+urllib3==1.26.14
+validators==0.20.0
+watchdog==3.0.0
+wcwidth==0.2.6
+webencodings==0.5.1
+websocket-client==1.5.1
+Werkzeug==2.2.2
+y-py==0.5.9
+yarl==1.8.2
+zipp==3.15.0
