--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ click==8.1.3
 colorama==0.4.6
 colorgram.py==1.2.0
 comm==0.1.2
-contourpy==1.0.7
+contourpy==1.0.6
 cryptography==39.0.0
 cycler==0.11.0
 debugpy==1.6.6
@@ -29,7 +29,7 @@ fastjsonschema==2.16.3
 Flask==2.2.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.3
-fonttools==4.39.4
+fonttools==4.38.0
 frozenlist==1.3.3
 gitdb==4.0.10
 GitPython==3.1.31
@@ -37,32 +37,29 @@ google==3.0.0
 greenlet==2.0.2
 idna==3.4
 importlib-metadata==6.6.0
-ipykernel==6.21.3
-ipython==8.11.0
+ipykernel==6.16.2
+ipython==7.34.0
 ipython-genutils==0.2.0
 iso8601==1.1.0
 itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
 jsonschema==4.17.3
-jupyter_client==8.0.3
-jupyter_core==5.2.0
+jupyter_client==8.0.0a1
+jupyter_core==5.0.0rc2
 kiwisolver==1.4.4
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
-matplotlib==3.7.1
+matplotlib==3.5.3
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.5
 multidict==6.0.4
-mysql==0.0.3
-mysql-connector-python==8.0.32
-mysqlclient==2.1.1
 nest-asyncio==1.5.6
-numpy==1.24.2
+numpy==1.21.6
 openpyxl==3.1.2
 packaging==23.0
-pandas==1.5.3
+pandas==1.3.5
 parso==0.8.3
 passlib==1.7.4
 patsy==0.5.3
@@ -75,7 +72,6 @@ prettytable==3.6.0
 prompt-toolkit==3.0.38
 protobuf==3.20.3
 psutil==5.9.4
-psycopg2==2.9.6
 pure-eval==0.2.2
 pyarrow==12.0.0
 pycparser==2.21
@@ -89,12 +85,11 @@ pyrsistent==0.19.3
 pyseto==1.7.1
 python-dateutil==2.8.2
 pytz==2022.7.1
-pywin32==305
 pyzmq==25.0.0
-replit==3.2.5
+replit==1.2.11
 requests==2.28.2
 rich==13.3.5
-scipy==1.10.1
+scipy==1.7.3
 seaborn==0.12.2
 Send2Trash==1.8.0
 six==1.16.0
@@ -102,7 +97,7 @@ smmap==5.0.0
 soupsieve==2.3.2.post1
 SQLAlchemy==2.0.12
 stack-data==0.6.2
-statsmodels==0.14.0
+statsmodels==0.13.5
 streamlit==1.22.0
 tabulate==0.9.0
 tenacity==8.2.2
